examples/type_system/failing/04_compile_float_string_arg.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn scale(x: Float, factor: Float) -> Float {
    x * factor
}

// Compile-time mismatch: argument #1 is String, expected Float.
scale("3.14", 2.0)
